Criei view para visualizar total de relatóorios

--- a/Views/Relatorios/Criar.cshtml
+++ b/Views/Relatorios/Criar.cshtml
@@ -1,10 +1,8 @@
-@{
-    ViewData["Title"] = "Relatórios de Serviço de Campo";
-}
+@model IEnumerable<Relatorio>
 
 <div class="d-flex">
     <h1 class="flex-grow-1">
-        @ViewData["Title"]
+        Relatórios de Serviço de Campo
     </h1>
 </div>
 <hr>
