--- a/Views/Relatorios/Index.cshtml
+++ b/Views/Relatorios/Index.cshtml
@@ -1,9 +1,8 @@
-﻿@{
-    ViewData["Title"] = "Relatórios de Campo";
-}
+@model IEnumerable<Relatorio>
 
-<div>
-    <h1>
-        @ViewData["Title"]
+<div class="d-flex">
+    <h1 class="flex-grow-1">
+        Todos os Relatórios
     </h1>
 </div>
+<hr>
