--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Relatorios" asp-action="Criar">Criar Relatórios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Relatorios" asp-action="Index">Todos os Relatórios</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Relatorios" asp-action="Lista">Todos os Relatórios</a>
                         </li>
                     </ul>
                 </div>
