--- a/Views/Relatorios/Criar.cshtml
+++ b/Views/Relatorios/Criar.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Relatorio>
+@model List<Relatorio>
 
 <div class="d-flex">
     <h1 class="flex-grow-1">
@@ -27,7 +27,7 @@
     <div class="form-group mb-3">
         Mes do Relatório
         <select class="form-select" name="" id="">
-            <option value="">Mes</option>
+            <option value="">Selecione o Mês</option>
         </select> 
     </div>
     
