--- a/Views/Relatorios/Lista.cshtml
+++ b/Views/Relatorios/Lista.cshtml
@@ -10,6 +10,8 @@
     @foreach (var relatorio in Model)
     {
         <div>
+            <h2> @relatorio.Publicador </h2>
+            <p> @relatorio.Mes </p>            
             <p> @relatorio.Horas </p>
         </div>
     }
