Desenvolvendo metodo de enviar relatorio para o banco de dados

--- a/Views/CadastroDePublicador/Criar.cshtml
+++ b/Views/CadastroDePublicador/Criar.cshtml
@@ -25,7 +25,7 @@
 
     <div class="d-grid gap-2 mt-3 mb-5">
         <button type="submit" class="btn btn-primary btn-block"><em class="fas fa-arrow-right"></em>
-            Enviar Informações</button>
+            Cadastrar Publicador</button>
     </div>
 
 </form>
