--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using JWForm
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using JWForm.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using JWForm
