--- a/Views/Relatorios/Lista.cshtml
+++ b/Views/Relatorios/Lista.cshtml
@@ -14,6 +14,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Relatório de </h5>
                     <h6 class="card-subtitle mb-2 text-muted">@relatorio.Publicador.Nome</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">@relatorio.Publicador.Tipo</h6>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><strong>Mês de @relatorio.Mes </strong></li>
