--- a/Views/CadastroDePublicador/Criar.cshtml
+++ b/Views/CadastroDePublicador/Criar.cshtml
@@ -23,6 +23,16 @@
         </select>
     </div>
 
+    <div class="form-group mb-3">
+        Você é :
+        <select class="form-select" name="tipo">
+            <option value="0">Publicador não baizado</option>
+            <option value="1">Publicador baizado</option>
+            <option value="2">Pioneiro Auxiliar</option>
+            <option value="3">Pioneiro Regular</option>
+        </select>
+    </div>
+
     <div class="d-grid gap-2 mt-3 mb-5">
         <button type="submit" class="btn btn-primary btn-block"><em class="fas fa-arrow-right"></em>
             Cadastrar Publicador</button>
