Separei os grpos de publicadores em resumo

--- a/Views/CadastroDePublicador/Criar.cshtml
+++ b/Views/CadastroDePublicador/Criar.cshtml
@@ -26,8 +26,8 @@
     <div class="form-group mb-3">
         Você é :
         <select class="form-select" name="tipo">
-            <option value="0">Publicador não baizado</option>
-            <option value="1">Publicador baizado</option>
+            <option value="0">Publicador não batizado</option>
+            <option value="1">Publicador batizado</option>
             <option value="2">Pioneiro Auxiliar</option>
             <option value="3">Pioneiro Regular</option>
         </select>
