--- a/Views/Relatorios/Resumo.cshtml
+++ b/Views/Relatorios/Resumo.cshtml
@@ -1,4 +1,4 @@
-@model List<Relatorio>
+@model ResumoVM
 
 <div class="d-flex">
     <h1 class="flex-grow-1">
@@ -7,3 +7,13 @@
 </div>
 <hr>
 
+//Exibir Total de Horas de
+@Model.totalDeHoras
+
+//Publicadores Batizados
+
+//Publicadores Não Batizados
+
+//Pioneiros Auxiliares
+
+//Pioneiros Regulares
