resumo apresenta total de horas de cada grupo

--- a/Views/Relatorios/Criar.cshtml
+++ b/Views/Relatorios/Criar.cshtml
@@ -59,7 +59,7 @@
     </div>
 
     <div class="form-group mb-3">
-        EstudosBibicos 
+        Estudos Bíblicos 
         <input class="form-control" name="estudosBiblicos" type="number">
     </div>
 
@@ -69,7 +69,7 @@
     </div>
 
     <div class="form-group mb-3">
-        Observacao 
+        Observações 
         <input class="form-control" name="observacao" type="text">
     </div>
 
