Mudei mes para formato DataTime

--- a/Views/Relatorios/Lista.cshtml
+++ b/Views/Relatorios/Lista.cshtml
@@ -17,7 +17,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">@relatorio.Publicador.Tipo</h6>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>Mês de @relatorio.Mes </strong></li>
+                    <li class="list-group-item"><strong>Data: @relatorio.Mes.ToString("MM-yyyy")</strong></li>
                     <li class="list-group-item">Publicações: @relatorio.Publicacoes</li>
                     <li class="list-group-item">Vídeos: @relatorio.Videos</li>
                     <li class="list-group-item">Revisitas: @relatorio.Revisitas</li>
