--- a/Views/Relatorios/Criar.cshtml
+++ b/Views/Relatorios/Criar.cshtml
@@ -25,51 +25,36 @@
         Relatório
     </h2>
 
-    <div class="form-group mb-3">
-        Mes do Relatório
-        <select class="form-select" name="mes">
-            <option value="Janeiro">Janeiro</option>
-            <option value="Fevereiro">Fevereiro</option>
-            <option value="Março">Março</option>
-            <option value="Abril">Abril</option>
-            <option value="Maio">Maio</option>
-            <option value="Junho">Junho</option>
-            <option value="Julho">Julho</option>
-            <option value="Agosto">Agosto</option>
-            <option value="Setembro">Setembro</option>
-            <option value="Outubro">Outubro</option>
-            <option value="Novembro">Novembro</option>
-            <option value="Dezembro">Dezembro</option>
-        </select> 
-    </div>
+    <label for="birthday">Mês do relatório:</label>
+    <input type="month" name="mes">
     
     <div class="col form-group">
-        Publicações 
+        Publicações:
         <input class="form-control" name="publicacoes" type="number">
     </div>
 
     <div class="form-group mb-3">
-        Videos 
+        Videos:
         <input class="form-control" name="videos" type="number">
     </div>
 
     <div class="form-group mb-3">
-        Revisitas 
+        Revisitas:
         <input class="form-control" name="revisitas" type="number">
     </div>
 
     <div class="form-group mb-3">
-        Estudos Bíblicos 
+        Estudos Bíblicos:
         <input class="form-control" name="estudosBiblicos" type="number">
     </div>
 
     <div class="form-group mb-3">
-        Horas 
+        Horas:
         <input class="form-control" name="horas" type="number">
     </div>
 
     <div class="form-group mb-3">
-        Observações 
+        Observações: 
         <input class="form-control" name="observacao" type="text">
     </div>
 
