--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,34 +12,66 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
+
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">JWForm</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CadastroDePublicador" asp-action="Criar">Cadastrar</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Relatorios" asp-action="Criar">Criar Relatórios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Relatorios" asp-action="Resumo">Resumo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Relatorios" asp-action="Lista">Todos os Relatórios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
-                        </li>
+                        
                     </ul>
                 </div>
+
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+
+					<ul class="navbar-nav" show-if='User.IsInRole(Perfis.OperadorLogistico)'>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+								aria-haspopup="true" aria-expanded="false">Publicadores
+                            </a>
+							<div class="dropdown-menu">
+                                
+                                <a class="dropdown-item" asp-controller="CadastroDePublicador" asp-action="Criar">
+                                    Cadastrar
+                                </a>
+
+							</div>
+						</li>
+
+						<li class="nav-item dropdown">
+
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+								aria-haspopup="true" aria-expanded="false">Relatórios
+                            </a>
+							<div class="dropdown-menu">
+                                
+                                <a class="dropdown-item" asp-controller="Relatorios" asp-action="Lista">
+                                    Todos os Relatórios
+                                </a>
+                                
+                                <a class="dropdown-item" asp-controller="Relatorios" asp-action="Criar">
+                                    Criar Relatórios
+                                </a>
+
+                                <a class="dropdown-item" asp-controller="Relatorios" asp-action="Resumo">
+                                    Resumo
+                                </a>								
+
+							</div>
+
+						</li>
+					</ul>
+
+				</div>
             </div>
+
         </nav>
     </header>
     <div class="container">
