Os relatórios são criados com o mês passado

--- a/Views/Relatorios/Criar.cshtml
+++ b/Views/Relatorios/Criar.cshtml
@@ -13,6 +13,7 @@
         Publicador
     </h2>
 
+
     <div class="form-group mb-3">
         Selecione seu nome 
         <select class="form-select" name="publicador" 
@@ -25,8 +26,7 @@
         Relatório
     </h2>
 
-    <label for="birthday">Mês do relatório:</label>
-    <input type="month" name="mes">
+    <p>Mês do relatório:<strong> @ViewData["mes"] </strong></p>
     
     <div class="col form-group">
         Publicações:
