--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
 
-                <a class="navbar-brand" asp-area="" asp-controller="Relatorios" asp-action="Resumo">JWForm</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Relatorios" asp-action="Criar">JWForm</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,9 +29,13 @@
 								aria-haspopup="true" aria-expanded="false">Publicadores
                             </a>
 							<div class="dropdown-menu">
-                                
-                                <a class="dropdown-item" asp-controller="CadastroDePublicador" asp-action="Criar">
+
+                                <a class="dropdown-item" asp-controller="Publicadores" asp-action="Criar">
                                     Cadastrar
+                                </a>
+
+                                <a class="dropdown-item" asp-controller="Publicadores" asp-action="Listar">
+                                    Listar
                                 </a>
 
 							</div>
@@ -44,7 +48,7 @@
                             </a>
 							<div class="dropdown-menu">
                                 
-                                <a class="dropdown-item" asp-controller="Relatorios" asp-action="Lista">
+                                <a class="dropdown-item" asp-controller="Relatorios" asp-action="Listar">
                                     Todos os Relatórios
                                 </a>
                                 
