--- a/Views/Publicadores/Criar.cshtml
+++ b/Views/Publicadores/Criar.cshtml
@@ -7,7 +7,7 @@
 </div>
 <hr>
 
-<form asp-action="Criar" asp-controller="CadastroDePublicador" method="post" enctype="multipart/form-data">
+<form asp-action="Criar" asp-controller="Publicadores" method="post" enctype="multipart/form-data">
 
     <div class="form-group mb-3">
         Nome
