--- a/Views/Publicadores/Editar.cshtml
+++ b/Views/Publicadores/Editar.cshtml
@@ -37,7 +37,7 @@
     </div>
 
     <div class="form-group mt-5">
-        <a asp-action="Index" class="btn btn-light"> Cancelar</a>
+        <a asp-action="listar" class="btn btn-light"> Cancelar</a>
         <button type="submit" class="btn btn-primary"> Salvar</button>
     </div>
     
