--- a/Views/Publicadores/Listar.cshtml
+++ b/Views/Publicadores/Listar.cshtml
@@ -11,8 +11,7 @@
 <div class="list-group">
     @foreach (var item in Model)
     {
-        <a class="list-group-item list-group-item-action d-flex" asp-action="Editar" asp-route-id="@item.PublicadorId"
-        link-if='User.HasClaim(Entidades.PERIODOS, Acoes.EDITAR)'>
+        <a class="list-group-item list-group-item-action d-flex" asp-action="Editar" asp-route-id="@item.PublicadorId">
             <span class='flex-grow-1'>
                 @item.Nome - @item.Tipo
             </span>
