Criei um filtro de relatórios por publicador e mês

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
 							<div class="dropdown-menu">
                                 
                                 <a class="dropdown-item" asp-controller="Relatorios" asp-action="Listar">
-                                    Todos os Relatórios
+                                    buscar Relatórios
                                 </a>
                                 
                                 <a class="dropdown-item" asp-controller="Relatorios" asp-action="Criar">
