--- a/Views/Relatorios/Listar.cshtml
+++ b/Views/Relatorios/Listar.cshtml
@@ -13,7 +13,7 @@
     <div class='row'>
 
 		<div class='col-md-2'>
-            <select class="form-select mb-3" name="publicador" 
+            <select class="form-select mb-3" name="publicadorId" 
                 asp-items='(SelectList) ViewData["listaDePublicadores"]'>
                 <option value="">Publicadores</option>
             </select>
