--- a/Views/Relatorios/Listar.cshtml
+++ b/Views/Relatorios/Listar.cshtml
@@ -8,36 +8,28 @@
 
 <hr>
 
-<form method='get'>
+<form class="row gx-3 gy-2 align-items-center" method='get'>
 
-    <div class='row'>
-
-		<div class='col-md-2'>
-            <select class="form-select mb-3" name="publicadorId" 
-                asp-items='(SelectList) ViewData["listaDePublicadores"]'>
-                <option value="">Publicadores</option>
-            </select>
-		</div>
-
-		<div class='col-md-2'>
-            <input class="form-select mb-3" name="mes" type="month">
-		</div>
-
-        <div class='col-md-2 d-flex justify-content-end'>
-			<button class="btn btn-outline-secondary mb-3" type="button" id='btnLimpar'>
-				<i class="fas fa-redo"></i> Limpar
-			</button>
-			</br>
-		</div>
-
-        <div class='col-md-2 d-flex justify-content-end'>
-			<button class="btn btn-outline-primary mb-3 " type="submit">
-				<em class="fas fa-search"></em> Buscar
-			</button>
-		</div>
-
+    <div class="col-sm-3">
+        <input class="form-select" name="mes" type="month">
     </div>
-
+    <div class="col-sm-3">
+        <select class="form-select" name="publicadorId" 
+            asp-items='(SelectList) ViewData["listaDePublicadores"]'>
+            <option value="">Publicadores</option>
+        </select>
+    </div>
+    <div class="col-auto">
+        <button class="btn btn-outline-secondary" type="button" id='btnLimpar'>
+            <i class="fas fa-redo"></i> Limpar
+        </button>
+    </div>
+    <div class="col-auto">       
+        <button class="btn btn-primary" type="submit">
+            <em class="fas fa-search"></em> Buscar
+        </button>
+  </div>
+  
 </form>
 
 <div class="row">
