--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -3,11 +3,11 @@
 }
 
 <div class="text-center">
-    <h1> Identifique-se! </h1>
+    <h1 class="mb-4"> Identifique-se! </h1>
 
     <form method="POST">
 
-        <div class='form-group'>
+        <div class='form-group mb-3'>
             <input id='senha' name='senha' class='form-control' placeholder="Senha" required type="password">
         </div>
 
@@ -15,5 +15,6 @@
             Entrar
         </button>
     </form>
+    
     
 </div>
