Indico e listo o numero de publicadores pendentes

--- a/Views/Relatorios/Editar.cshtml
+++ b/Views/Relatorios/Editar.cshtml
@@ -25,7 +25,7 @@
             
             <div class="Col-md-6 input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">Mês</span>
-                <input class="form-control" name="mes" type="month">
+                <input class="form-control" name="data" type="month">
             </div>
 
         </div>
