--- a/Views/Publicadores/Pendentes.cshtml
+++ b/Views/Publicadores/Pendentes.cshtml
@@ -2,7 +2,7 @@
 
 <div class="d-flex">
     <h1 class="flex-grow-1">
-        Todos os Publicadores
+        Publicadores Pendentes
     </h1>
 </div>
 
@@ -11,7 +11,7 @@
 <div class="list-group">
     @foreach (var item in Model)
     {
-        <a class="list-group-item list-group-item-action d-flex" asp-action="Editar" asp-route-id="@item.PublicadorId">
+        <a class="list-group-item list-group-item-action d-flex" asp-action="Editar" asp-route-id="@item.">
             <span class='flex-grow-1'>
                 @item.Nome - @item.Tipo
             </span>
