--- a/Views/Relatorios/Resumo.cshtml
+++ b/Views/Relatorios/Resumo.cshtml
@@ -11,7 +11,7 @@
 " asp-action="Resumo" asp-controller="Relatorios" method="post" enctype="multipart/form-data">
 
     <div class="col-sm-4">
-        <input class="form-select" name="mes" type="month" value="@ViewData["mes"]">
+        <input class="form-select" name="data" type="month" value="@ViewData["mes"]">
     </div>
     <div class="col-auto">
         <button class="btn btn-outline-primary" type="submit">
@@ -23,6 +23,22 @@
 
 
 <div class="row">
+
+    <div class='col-md-6 col-lg-3 mb-2'>
+        <div class="card">
+            <div class="card-body">
+
+                <h2 class='mt-4'>
+                    @Model.totalDePublicadoresPendentes
+                </h2>
+
+                <a asp-controller="Publicadores" asp-action="Pendentes">
+                    Publicadores pendentes
+                </a>
+
+            </div>
+        </div>
+    </div>
 
     <div class='col-md-6 col-lg-3 mb-2'>
         <div class="card">
