--- a/Views/Relatorios/Listar.cshtml
+++ b/Views/Relatorios/Listar.cshtml
@@ -11,7 +11,7 @@
 <form class="row gx-3 gy-2 align-items-center mb-5" method='get'>
 
     <div class="col-sm-3">
-        <input class="form-select" name="data" id="selectMes" type="month">
+        <input class="form-select" name="data" id="selectMes" type="month" value="@ViewData["mes"]">
     </div>
     <div class="col-sm-3">
         <select class="form-select" name="publicadorId" id="selectNome" 
