--- a/Views/Publicadores/Listar.cshtml
+++ b/Views/Publicadores/Listar.cshtml
@@ -11,7 +11,7 @@
 <div class="list-group">
     @foreach (var item in Model)
     {
-        <a class="list-group-item list-group-item-action d-flex" asp-action="Editar" asp-route-id="@item.PublicadorId">
+        <a class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center" asp-action="Editar" asp-route-id="@item.PublicadorId">
             <span class='flex-grow-1'>
                 @item.Nome - @item.Tipo
             </span>
