--- a/Views/Publicadores/Pendentes.cshtml
+++ b/Views/Publicadores/Pendentes.cshtml
@@ -25,7 +25,7 @@
 <div class="list-group">
     @foreach (var item in Model)
     {
-        <a class="list-group-item list-group-item-action d-flex" asp-action="Editar" asp-route-id="@item.">
+        <a class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center" asp-action="Editar" asp-route-id="@item.">
             <span class='flex-grow-1'>
                 @item.Nome - @item.Tipo
             </span>
