--- a/Views/Relatorios/Listar.cshtml
+++ b/Views/Relatorios/Listar.cshtml
@@ -32,33 +32,31 @@
   
 </form>
 
-<div class="row align-items-center">
-    @foreach (var relatorio in Model)
-    {
-        
-        <div class="col-sm-4">
-            <div class="list-group-item list-group-item-action d-flex card mb-5" style="width: 18rem;">
-                <div class="card-body">
-                    <h6 class="card-subtitle mb-2 text-muted">@relatorio.Publicador.Nome</h6>
-                    <h6 class="card-subtitle mb-2 text-muted">@relatorio.Publicador.Tipo</h6>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>Data: @relatorio.Data.ToString("MM-yyyy")</strong></li>
-                    <li class="list-group-item">Publicações: @relatorio.Publicacoes</li>
-                    <li class="list-group-item">Vídeos: @relatorio.Videos</li>
-                    <li class="list-group-item">Revisitas: @relatorio.Revisitas</li>
-                    <li class="list-group-item">Estudos: @relatorio.EstudosBiblicos</li>
-                    <li class="list-group-item">Horas: @relatorio.Horas</li>
-                    <li class="list-group-item">Observações : @relatorio.Observacao</li>
-                    <li class="list-group-item">
-                        <a asp-action="Editar" asp-route-id="@relatorio.RelatorioId" class="card-link">Editar relatório</a>
-                    </li>
-                </ul>     
+
+@foreach (var relatorio in Model)
+{
+    <div class="col-sm-4">
+        <div class="list-group-item list-group-item-action d-flex card mb-5" style="width: 18rem;">
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">@relatorio.Publicador.Nome</h6>
+                <h6 class="card-subtitle mb-2 text-muted">@relatorio.Publicador.Tipo</h6>
             </div>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center"><strong>Data: @relatorio.Data.ToString("MM-yyyy")</strong></li>
+                <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center">Publicações: @relatorio.Publicacoes</li>
+                <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center">Vídeos: @relatorio.Videos</li>
+                <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center">Revisitas: @relatorio.Revisitas</li>
+                <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center">Estudos: @relatorio.EstudosBiblicos</li>
+                <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center">Horas: @relatorio.Horas</li>
+                <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center">Observações : @relatorio.Observacao</li>
+                <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center">
+                    <a asp-action="Editar" asp-route-id="@relatorio.RelatorioId" class="card-link">Editar relatório</a>
+                </li>
+            </ul>     
         </div>
-        
-    }
-</Div>
+    </div>
+
+}
 
 @section scripts{
     <script src="~/js/Relatorios/scripts.js" asp-append-version="true"></script>
